[tool.poetry]
package-mode = false
name = "apple-extra-holidays"
version = "0.1.0"
description = "Apple extra holidays"
authors = ["suiyuran <suiyuran@163.com>"]

[tool.poetry.dependencies]
python = "^3.10"
icalendar = "^5.0.13"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line_length = 88

[tool.isort]
profile = "black"
force_single_line = true
lines_after_imports = 2
lines_between_types = 1
